--- a/Palindromo copy/index.html
+++ b/Palindromo copy/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ita">
+<html lang="it">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,6 +50,9 @@
 
         <!-- JS BOOTSTRAP -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+        <!-- JS -->
+         <script src="js/scripts.js"></script>
 
     </body>
 </html>
