--- a/Palindromo/index.html
+++ b/Palindromo/index.html
@@ -16,7 +16,7 @@
         <!-- CDN Icon Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-        <title>Bootstrap</title>
+        <title>Palindromo</title>
     </head>
     <body>
 
