--- a/Pari e Dispari/index.html
+++ b/Pari e Dispari/index.html
@@ -16,37 +16,37 @@
         <!-- CDN Icon Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-        <title>Bootstrap</title>
+        <title>Pari o Dispari</title>
     </head>
     <body>
-
-        <!-- HEADER -->
-
-         <header>
-
-            <div class="container">
-                
-            </div>
-
-         </header>
 
         <!-- MAIN -->
 
         <main>
 
+            <h1 class="text-center m-5">Pari o Dispari</h1>
             <div class="container">
+                <h2>Inserisci un numero da 1 a 5</h2>
+                <form action="">
+                    <div class="my-4 mx-auto"> 
+                        <button id="pari-button" class="btn fw-medium btn-dark" type="button">
+                            Pari
+                        </button>
+                        <button id="dispari-button" class="btn fw-medium btn-dark" type="button">
+                            Dispari 
+                        </button>
+                    </div>
+                </form>
+
+                <form action="" id="number" class="d-none" >
+                    <input type="number" max="5" min="1">
+                    <button id="invio" type="submit">Invia</button>
+                </form>
 
             </div>
 
         </main>
 
-        <!-- FOOTER -->
-
-        <Footer>
-
-            <div class="container"></div>
-
-        </Footer>
 
         <!-- JS BOOTSTRAP -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
