--- a/Pari e Dispari/index.html
+++ b/Pari e Dispari/index.html
@@ -39,7 +39,7 @@
 
                 <form action="" id="number" class="d-none text-center">
                     <label for="numberInput" id="stringa" class="d-none mb-3">Seleziona un numero da 1 a 5</label>
-                    <input type="number" id="numberInput" max="5" min="1" required>
+                    <input type="number" id="numberInput" max="5" min="1" value="1" required>
                     <button id="invio" type="button">Invia</button>
                 </form>
 
